--- a/packages/core/src/overlay/OverlayHeader.css
+++ b/packages/core/src/overlay/OverlayHeader.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   gap: var(--salt-spacing-50);
   padding-top: calc((var(--salt-size-base) - var(--salt-text-h4-lineHeight)) / 2);
+  align-items: flex-start;
 }
 
 .saltOverlayHeader-header {
